<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/green"
    tools:context="edu.sdsu.cs.cs646.assign4.PostDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reportTitle"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>


        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:inputType="text|textCapSentences|textMultiLine"
            android:hint="@string/description"
            android:gravity="top"
            android:background="@drawable/border"
            android:maxLength="300"
            android:imeOptions="actionDone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cameraButton"
                android:src="@android:drawable/ic_menu_camera"
                android:onClick="dispatchTakePictureIntent"
                android:background="@color/accent_material_light"
                android:layout_weight="0.5"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/galleryButton"
                android:src="@android:drawable/ic_menu_gallery"
                android:onClick="goToGallery"
                android:background="@color/accent_material_light"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDesc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/cancelButton"
                android:text="@string/cancel"
                android:layout_marginTop="10dp"
                android:onClick="goToHome"
                android:layout_weight="0.5"
                android:background="@color/accent_material_light"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/submitButton"
                android:text="@string/submit"
                android:layout_marginTop="10dp"
                android:onClick="postJsonObjectRequest"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:background="@color/accent_material_light"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
