<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="edu.sdsu.cs.cs646.assign4.DisplayConfirmation"
            android:background="@color/pink">

    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="edu.sdsu.cs.cs646.assign4.DisplayConfirmation"
         android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/confirmationPg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/confirmationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:textSize="14sp"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/userLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textStyle="bold|italic"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/conUserLabel"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_column="1"
                android:paddingLeft="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/descLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textStyle="bold|italic"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/conDescLabel"
                android:textColor="@color/black"
                android:singleLine="false"
                android:textSize="12sp"
                android:layout_column="1"
                android:paddingLeft="5dp"
                android:width="0dip"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/locationLabel"
                android:layout_column="0"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:singleLine="false"
                android:id="@+id/conLocationLabel"
                android:layout_column="1"
                android:paddingLeft="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <fragment
                android:layout_marginTop="10dp"
                android:id="@+id/conMapView"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_column="1"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/imageLabel"
                android:layout_column="0"/>
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/conImageLabel"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/done"
                android:layout_marginLeft="40dp"
                android:layout_gravity="left"
                android:layout_column="1"
                android:text="@string/done"
                android:onClick="goToHome"/>
        </TableRow>

    </TableLayout>

</ScrollView>
